--- a/src/private/tumblr.html
+++ b/src/private/tumblr.html
@@ -2,358 +2,6 @@
 <head>
     <title>Sign up | Tumblr</title>
     <style>
-    a,
-    abbr,
-    acronym,
-    address,
-    applet,
-    article,
-    aside,
-    audio,
-    b,
-    big,
-    blockquote,
-    body,
-    canvas,
-    caption,
-    center,
-    cite,
-    code,
-    dd,
-    del,
-    details,
-    dfn,
-    div,
-    dl,
-    dt,
-    em,
-    embed,
-    fieldset,
-    figcaption,
-    figure,
-    footer,
-    form,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    header,
-    hgroup,
-    html,
-    i,
-    iframe,
-    img,
-    ins,
-    kbd,
-    label,
-    legend,
-    li,
-    mark,
-    menu,
-    nav,
-    object,
-    ol,
-    output,
-    p,
-    pre,
-    q,
-    ruby,
-    s,
-    samp,
-    section,
-    small,
-    span,
-    strike,
-    strong,
-    sub,
-    summary,
-    sup,
-    table,
-    tbody,
-    td,
-    tfoot,
-    th,
-    thead,
-    time,
-    tr,
-    tt,
-    u,
-    ul,
-    var,
-    video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font: inherit;
-        font-size: 100%;
-        vertical-align: baseline;
-    }
-    * {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
-    .logged_out.show_form {
-        height: 100%;
-    }
-    .identity {
-        background: #36465d;
-    }
-    body {
-        color: #444;
-        font-family: Helvetica Neue, HelveticaNeue, Helvetica, Arial, sans-serif;
-        font-weight: 400;
-        line-height: 1.4;
-        font-size: 14px;
-        font-style: normal;
-    }
-    .about-tumblr-showcase {
-        font-size: 16px;
-        height: 100%;
-        left: 0;
-        overflow: hidden;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 10;
-        -webkit-animation: aboutTumblrIntro .7s ease-out .5s;
-        animation: aboutTumblrIntro .7s ease-out .5s;
-        -webkit-animation-fill-mode: backwards;
-        animation-fill-mode: backwards;
-    }
-    @-webkit-keyframes aboutTumblrIntro {
-        0% {
-            opacity: 0
-        }
-        to {
-            opacity: 1
-        }
-    }
-    @keyframes aboutTumblrIntro {
-        0% {
-            opacity: 0
-        }
-        to {
-            opacity: 1
-        }
-    }
-    .about-tumblr-showcase.show-login .dash_b_form_container {
-        display: block;
-        -webkit-animation: signupFormIntro .3s ease-out .7s;
-        animation: signupFormIntro .3s ease-out .7s;
-        -webkit-animation-fill-mode: backwards;
-        animation-fill-mode: backwards;
-    }
-    .about-tumblr-showcase .dash_b_form_container {
-        display: none;
-        left: 50%;
-        margin-left: -400px;
-        position: absolute;
-        top: 50%;
-        width: 800px;
-        box-sizing: border-box;
-    }
-    .dash_b_form_container.has_subheading {
-        margin-top: -241px;
-    }
-    .dash_b_form_container {
-        position: relative;
-        top: 50%;
-        margin: 0 auto;
-        width: 260px;
-        z-index: 5;
-    }
-    .logo-word.large {
-        float: none;
-    }
-    .logo-word {
-        overflow: hidden;
-        margin: auto;
-        width: 232px;
-        height: 50px;
-        padding: 0;
-    }
-    .dash_b #logo a {
-        pointer-events: none;
-    }
-    .logo-word.large .logo_anchor {
-        background-image: url("img_psm-red-155x220.png");
-        background-size: 100% auto;
-    }
-    .logo-word .logo_anchor {
-        background-image: url("img_psm-red-155x220.png");
-        background-repeat: no-repeat;
-        background-position: 50%;
-        text-indent: -999em;
-        overflow: hidden;
-        display: block;
-        height: 100%;
-        width: 100%;
-    }
-    a,
-    body {
-        color: #444;
-    }
-    .dash_b .subheading {
-        width: 517px;
-        position: relative;
-        left: 50%;
-        margin: 10px 0 16px -258px;
-        font-size: 16px;
-        line-height: 22px;
-        white-space: nowrap;
-        color: #fff;
-        text-align: center;
-    }
-    .logged_out.show_form .signup_forms {
-        left: 50%;
-        opacity: 1;
-    }
-    .dash_b .signup_forms {
-        position: relative;
-        top: 0;
-        left: 0;
-        margin-top: 0;
-        padding: 0;
-        opacity: 1;
-    }
-    .signup_forms {
-        left: 50%;
-        transition-duration: 0;
-    }
-    .signup_forms {
-        position: fixed;
-        display: block;
-        opacity: 0;
-        left: -100%;
-        top: 25%;
-        margin: 71px 0 0 -130px;
-        width: 260px;
-        padding: 0 0 60px 0;
-        z-index: 3;
-        transition-property: left, opacity;
-        transition-duration: 0.25s;
-        transition-timing-function: ease;
-        box-sizing: border-box;
-    }
-    .clearfix {
-        zoom: 1;
-    }
-    body.dash_b .signup_forms .chrome.signup_forms_submit {
-        height: 45px;
-    }
-    .about-tumblr-showcase .dash_b_form_container .signup_forms_submit {
-        z-index: 1;
-    }
-    .chrome.signup_forms_submit {
-        width: 100%;
-        margin: 12px 0 0 0;
-    }
-    .signup_forms .chrome {
-        text-align: center;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 0;
-        line-height: 32px;
-        height: 35px;
-        margin: 18px 0;
-        float: none;
-        display: inline-block;
-        margin-left: 10px;
-        border-radius: 2px;
-        box-sizing: border-box;
-    }
-    .chrome.blue {
-        border-color: #529ecc;
-        background: #529ecc;
-    }
-    .chrome {
-        cursor: pointer;
-        font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-        color: #fff;
-        font-size: 13px;
-        line-height: 14px;
-        height: 30px;
-        padding: 4px 7px 5px 7px;
-        font-weight: bold;
-        border-width: 1px;
-        border-style: solid;
-        text-decoration: none;
-        border-radius: 2px;
-        border-color: #9da6af;
-        background: #9da6af;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-    button {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        background-color: transparent;
-        color: inherit;
-        cursor: pointer;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-    button,
-    input,
-    select,
-    textarea {
-        font-family: inherit;
-        font-size: inherit;
-        font-style: inherit;
-        font-weight: inherit;
-        line-height: inherit;
-    }
-    .logged_out .signup_forms_submit span.active {
-        display: block;
-    }
-    .chrome.signup_forms_submit#signup_login_button {
-        background-color: #fff;
-        color: #444;
-        border: none;
-    }
-    .logged_out #signup_login_button {
-        display: block;
-    }
-    .dash_b_form .explore {
-        font-size: 16px;
-        line-height: 22px white-space nowrap;
-        display: block;
-        margin-top: 17px;
-        margin-left: -6px;
-        color: #fff;
-        text-align: center;
-        font-weight: 700;
-        transition: opacity .25s linear, padding .25s linear;
-    }
-    a {
-        text-decoration: none;
-    }
-    .about-tumblr-showcase .showcase {
-        height: 100%;
-        position: relative;
-        width: 100%;
-        z-index: 1;
-    }
-    .ready .showcase .login-section .fullscreen_post_bg,
-    .ready .showcase .login-section .fullscreen_post_footer {
-        bottom: 45px;
-    }
-    .showcase .login-section .fullscreen_post_bg {
-        background-color: #36465d;
-    }
-    .showcase .login-section .fullscreen_post_bg,
-    .showcase .login-section .fullscreen_post_footer {
-        bottom: 0;
-        position: absolute;
-        transition: bottom .3s ease-out 1.7s;
-    }
     .fullscreen_post_bg {
         position: fixed;
         top: 0;
@@ -363,213 +11,27 @@
         background-size: cover;
         background-position: 50% 50%;
     }
-    .fullscreen_post_bg img {
-        display: none;
-    }
-    .fullscreen_post_footer {
+    .fullscreen_post_bg:before {
+        content: '';
         position: fixed;
-        top: auto;
+        top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        text-rendering: optimizeLegibility;
+        background-size: 100% 100%;
+        opacity: 0.6;
     }
-    .dash_b .fullscreen_post_footer .footer_legal_links {
-        left: 0;
-        position: absolute;
-        bottom: 0;
-    }
-    body .footer_legal_links {
-        opacity: 1;
-        color: #fff;
-    }
-    .footer_legal_links {
-        padding: 0 20px;
-        margin: 0 0 13px 0;
-        line-height: 25px;
-        opacity: 0;
-        z-index: 90210;
-        transition: opacity 0.2s linear;
-        text-align: center;
-    }
-    body .footer_legal_links a {
-        opacity: 1;
-    }
-    .login_link {
-        display: inline-block;
-        color: #fff;
-        text-decoration: none;
-        font-size: 14px;
-        padding-right: 5px;
-        padding-left: 5px;
-        margin-left: -5px;
-        margin-right: 12px;
-        font-weight: normal;
-    }
-    .ready .showcase .login-section .about-tumblr-btn {
-        bottom: 0;
-    }
-    .showcase .login-section .about-tumblr-btn {
-        background: #56bc8a;
-        box-shadow: inset 0 3px 0 rgba(0, 0, 0, .1);
-        bottom: -45px;
-        color: #fff;
-        cursor: pointer;
-        height: 45px;
-        font-weight: 700;
-        left: 0;
-        line-height: 45px;
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        z-index: 2;
-        transition: bottom .3s ease-out 1.7s;
-    }
-    .showcase-pagination {
-        left: 40px;
-        position: absolute;
-        top: 50%;
-        z-index: 2147483643;
-        -webkit-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
-    .showcase-pagination .dot {
-        border-radius: 50%;
-        box-shadow: inset 0 0 0 3px #fff;
-        cursor: pointer;
-        height: 16px;
-        margin-bottom: 10px;
-        opacity: .4;
-        position: relative;
-        width: 16px;
-        box-sizing: border-box;
-    }
-    .showcase-pagination .dot: hover {
-        opacity: 1;
-    }
-    .showcase-pagination .dot.active {
-        background: #fff;
-        box-shadow: none;
-        opacity: 1;
-    }
-    .l-header-container--refresh.l-header-container--transparent {
-        background: none;
-    }
-    .l-header-container--refresh {
-        box-shadow: 0 0 0 1px hsla(0, 0%, 100%, .13);
-        -webkit-transform: translateZ(0) translateY(0);
-        transform: translateZ(0) translateY(0);
-        z-index: 90;
-        background-color: #36465d;
+    .fullscreen_post_bg:after {
+        content: '';
         position: fixed;
-        width: 100%;
-    }
-    .logo {
-        float: left;
-        height: 100%;
-        width: auto;
-        overflow: hidden;
-        margin-right: -3px;
-    }
-    .logo .png-logo {
-        padding: 11px 18px 6px 22px;
-        height: 35px;
-        width: 21px;
-        background: url("img_psm-red-155x220.png") 22px 11px no-repeat;
-        background-size: 19px 33px;
-    }
-    .ui_search {
-        color: hsla(0, 0%, 100%, .6);
-        position: relative;
-        padding-right: 0;
-        overflow: hidden;
-        height: 100%;
-        width: auto;
-        margin: 0;
-    }
-    .ui_search .search_form_field {
-        max-width: 540px;
-        margin-right: 16px;
-        position: relative;
-        padding-left: 3px;
-    }
-    .ui_search .search_query {
-        transition: background .15s, color .15s;
-        color: hsla(0, 0%, 100%, .6);
-        padding-right: 10px;
-        padding-bottom: 2px;
-        padding-left: 39px;
-        background: rgba(0, 0, 0, .13);
-        font-weight: 400;
-        line-height: inherit;
-        font-size: 15px;
-        height: 34px;
-        width: 100%;
-        border: 0;
-        border-radius: 3px;
-        margin-top: 10px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
     }
     </style>
 </head>
-
-<body class="dash_b identity logged_out show_form">
-    <div class="about-tumblr-showcase ready show-login">
-        <div class="dash_b_form_container has_subheading">
-            <div>
-                <h1 class="logo-word large" id="logo"><a class="logo_anchor">Tumblr</a></h1>
-                <h2 class="subheading">Come for what you love.<br>Stay for what you discover.</h2>
-            </div>
-            <div class="dash_b_form">
-                <div class="signup_forms clearfix">
-                    <button class="chrome signup_forms_submit blue"><span class="active">Get Started</span>
-                    </button>
-                    <button class="chrome signup_forms_submit dark" id="signup_login_button"><span class="active">Log In</span>
-                    </button>
-                    <a class="explore">Here's what's trending</a>
-                </div>
-            </div>
-        </div>
-        <div class="showcase">
-            <div class="login-section active" style="z-index: 6;">
-                <div class="fullscreen_post_bg" style="background-image:url('bg.jpg');">
-                    <img id="fullscreen_post_image" src="bg.jpg">
-                </div>
-                <div class="fullscreen_post_footer">
-                    <div>
-                        <div class="footer_legal_links">
-                            <a class="login_link">Terms</a>
-                            <a class="login_link">Privacy</a>
-                            <a class="login_link">Jobs</a>
-                            <div class="login_link">Support</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="about-tumblr-btn">What is Tumblr?</div>
-            </div>
-        </div>
-        <div class="showcase-pagination">
-            <div class="dot active" title="Sign up"></div>
-            <div class="dot" title="So easy to use that it’s hard to explain."></div>
-            <div class="dot" title="Tumblr is blogs."></div>
-            <div class="dot" title="You already know how this works."></div>
-            <div class="dot" title="Seriously, put anything you want here."></div>
-            <div class="dot" title="Okay, it’s not actually hard to explain."></div>
-        </div>
-    </div>
-    <div class="l-header-container--refresh l-header-container--transparent">
-        <div>
-            <h1 class="logo"><a><div class="png-logo"></div></a></h1>
-            <div class="ui_search">
-                <form>
-                    <div>
-                        <div class="search_form_field">
-                            <input placeholder="Search Tumblr" class="search_query" type="text">
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+<body>
+    <div class="fullscreen_post_bg" style="background-image:url('bg.jpg');"></div>
 </body>
-
 </html>
