--- a/src/private/tumblr02.html
+++ b/src/private/tumblr02.html
@@ -11,9 +11,34 @@
         background-size: cover;
         background-position: 50% 50%;
     }
+    .about-tumblr-btn {
+        background: #56bc8a;
+        box-shadow: inset 0 3px 0 rgba(0, 0, 0, .1);
+        bottom: 0;
+        color: #fff;
+        cursor: pointer;
+        height: 45px;
+        font-weight: 700;
+        left: 0;
+        line-height: 45px;
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        z-index: 2;
+        transition: bottom .3s ease-out 1.7s;
+    }
+    body {
+        color: #444;
+        font-family: Helvetica Neue, HelveticaNeue, Helvetica, Arial, sans-serif;
+        font-weight: 400;
+        line-height: 1.4;
+        font-size: 14px;
+        font-style: normal;
+    }
     </style>
 </head>
 <body>
     <div class="fullscreen_post_bg" style="background-image:url('bg.jpg');"></div>
+    <div class="about-tumblr-btn">What is Tumblr?</div>
 </body>
 </html>
