--- a/src/private/index.html
+++ b/src/private/index.html
@@ -69,6 +69,7 @@
       <li><a href="webvr_cubes.html">WebVR</a> (<a href="https://threejs.org/examples/" target="_blank">three.js / examples / webvr / cubes <i class="fa fa-external-link" aria-hidden="true"></i></a>)</li>
       <li><a href="tumblr01.html">tumblr 1</a></li>
       <li><a href="tumblr02.html">tumblr 2</a></li>
+      <li><a href="tumblr03.html">tumblr 3</a></li>
     </ul>
   </body>
 </html>
