--- a/src/private/index.html
+++ b/src/private/index.html
@@ -70,6 +70,7 @@
       <li><a href="tumblr01.html">tumblr 1</a></li>
       <li><a href="tumblr02.html">tumblr 2</a></li>
       <li><a href="tumblr03.html">tumblr 3</a></li>
+      <li><a href="layers01.html">Layers - CSS Filter Effects</a></li>
     </ul>
   </body>
 </html>
