--- a/public/private/layers01.html
+++ b/public/private/layers01.html
@@ -18,6 +18,7 @@
       padding: 8px;
       box-shadow: 1px 1px 5px gray;
       cursor: pointer;
+      user-select: none;
       color: white;
     }
     li:hover {
