still need vendor prefix

--- a/src/private/layers01.html
+++ b/src/private/layers01.html
@@ -25,6 +25,9 @@
       padding: 8px;
       box-shadow: 1px 1px 5px gray;
       cursor: pointer;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
       user-select: none;
       color: white;
     }
