--- a/src/private/index.html
+++ b/src/private/index.html
@@ -72,6 +72,9 @@
       <li><a href="tumblr03.html">tumblr 3</a></li>
       <li><a href="layers01.html">Layers 1</a></li>
       <li><a href="layers02.html">Layers 2</a></li>
+      <li><a href="geometrynglyph01.html">Geometry and Glyph 1</a></li>
+      <li><a href="geometrynglyph02.html">Geometry and Glyph 2</a></li>
+      <li><a href="geometrynglyph03.html">Geometry and Glyph 3</a></li>
     </ul>
   </body>
 </html>
