--- a/public/private/geometrynglyph01.html
+++ b/public/private/geometrynglyph01.html
@@ -9,7 +9,9 @@
       margin: 8px 0 0 8px;
       padding: 8px;
       border: 1px solid lightgray;
+      border-radius: 0.5em;
       box-shadow: 1px 1px 5px gray;
+      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%)
     }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
       var i, div, first, cs, n;
       first = document.getElementById("first");
