--- a/public/private/geometrynglyph03.html
+++ b/public/private/geometrynglyph03.html
@@ -4,11 +4,11 @@
       font-family: Helvetica, Arial;
       font-size: 14pt;
     }
-    div {
+    div, input {
       display: inline-block;
       margin: 9px 1px 1px 9px;
       padding: 8px;
-    }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
+    }</style></head><body><input autofocus="autofocus"><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
       var i, div, first, cs, n;
       first = document.getElementById("first");
       cs = getComputedStyle(first, null);
