--- a/public/private/geometrynglyph02.html
+++ b/public/private/geometrynglyph02.html
@@ -6,9 +6,8 @@
     }
     div {
       display: inline-block;
-      margin: 8px 0 0 8px;
+      margin: 9px 1px 1px 9px;
       padding: 8px;
-      border: 1px solid lightgray;
     }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
       var i, div, first, cs, n;
       first = document.getElementById("first");
