--- a/src/private/geometrynglyph02.html
+++ b/src/private/geometrynglyph02.html
@@ -12,9 +12,8 @@
     }
     div {
       display: inline-block;
-      margin: 8px 0 0 8px;
+      margin: 9px 1px 1px 9px;
       padding: 8px;
-      border: 1px solid lightgray;
     }
     </style>
   </head>
