--- a/src/private/geometrynglyph03.html
+++ b/src/private/geometrynglyph03.html
@@ -10,7 +10,7 @@
       font-family: Helvetica, Arial;
       font-size: 14pt;
     }
-    div {
+    div, input {
       display: inline-block;
       margin: 9px 1px 1px 9px;
       padding: 8px;
@@ -18,6 +18,7 @@
     </style>
   </head>
   <body>
+    <input autofocus="autofocus">
     <div id="first">The quick brown fox jumps over the lazy dog.</div>
     <script>
     (function() {
