--- a/public/private/geometrynglyph03.html
+++ b/public/private/geometrynglyph03.html
@@ -4,11 +4,15 @@
       font-family: Helvetica, Arial;
       font-size: 14pt;
     }
-    div, input {
+    div {
       display: inline-block;
-      margin: 9px 1px 1px 9px;
+      margin: 8px 0 0 8px;
       padding: 8px;
-    }</style></head><body><input autofocus="autofocus"><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
+      background-image: url("img_psm-red-155x220.png");
+      background-size: 4px 4px;
+      background-position: left top;
+      color: #eee;
+    }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
       var i, div, first, cs, n;
       first = document.getElementById("first");
       cs = getComputedStyle(first, null);
