--- a/public/private/geometrynglyph01.html
+++ b/public/private/geometrynglyph01.html
@@ -11,7 +11,8 @@
       border: 1px solid lightgray;
       border-radius: 0.5em;
       box-shadow: 1px 1px 5px gray;
-      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%)
+      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+      color: #eee;
     }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
       var i, div, first, cs, n;
       first = document.getElementById("first");
