--- a/src/private/geometrynglyph01.html
+++ b/src/private/geometrynglyph01.html
@@ -17,7 +17,8 @@
       border: 1px solid lightgray;
       border-radius: 0.5em;
       box-shadow: 1px 1px 5px gray;
-      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%)
+      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+      color: #eee;
     }
     </style>
   </head>
