--- a/src/private/geometrynglyph03.html
+++ b/src/private/geometrynglyph03.html
@@ -10,15 +10,18 @@
       font-family: Helvetica, Arial;
       font-size: 14pt;
     }
-    div, input {
+    div {
       display: inline-block;
-      margin: 9px 1px 1px 9px;
+      margin: 8px 0 0 8px;
       padding: 8px;
+      background-image: url("img_psm-red-155x220.png");
+      background-size: 4px 4px;
+      background-position: left top;
+      color: #eee;
     }
     </style>
   </head>
   <body>
-    <input autofocus="autofocus">
     <div id="first">The quick brown fox jumps over the lazy dog.</div>
     <script>
     (function() {
