--- a/public/private/geometrynglyph01.html
+++ b/public/private/geometrynglyph01.html
@@ -13,16 +13,4 @@
       box-shadow: 1px 1px 5px gray;
       background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
       color: #eee;
-    }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
-      var i, div, first, cs, n;
-      first = document.getElementById("first");
-      cs = getComputedStyle(first, null);
-      n = window.innerWidth * window.innerHeight;
-      n /= parseInt(cs.width) * parseInt(cs.height);
-      n = parseInt(n);
-      for (i = 0; i < n; i++) {
-        div = document.createElement('DIV');
-        div.appendChild(document.createTextNode('The quick brown fox jumps over the lazy dog.'));
-        document.body.appendChild(div);
-      }
-    })();</script></body></html>
+    }</style></head><body><section id="container"><div id="first">The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
