--- a/public/private/geometrynglyph02.html
+++ b/public/private/geometrynglyph02.html
@@ -8,16 +8,4 @@
       display: inline-block;
       margin: 9px 1px 1px 9px;
       padding: 8px;
-    }</style></head><body><div id="first">The quick brown fox jumps over the lazy dog.</div><script>(function() {
-      var i, div, first, cs, n;
-      first = document.getElementById("first");
-      cs = getComputedStyle(first, null);
-      n = window.innerWidth * window.innerHeight;
-      n /= parseInt(cs.width) * parseInt(cs.height);
-      n = parseInt(n);
-      for (i = 0; i < n; i++) {
-        div = document.createElement('DIV');
-        div.appendChild(document.createTextNode('The quick brown fox jumps over the lazy dog.'));
-        document.body.appendChild(div);
-      }
-    })();</script></body></html>
+    }</style></head><body><section id="container"><div id="first">The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
