--- a/public/private/geometrynglyph02.html
+++ b/public/private/geometrynglyph02.html
@@ -8,4 +8,5 @@
       display: inline-block;
       margin: 9px 1px 1px 9px;
       padding: 8px;
-    }</style></head><body><section id="container"><div id="first">The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
+      box-sizing: border-box;
+    }</style></head><body><section id="container"><div>The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
