--- a/src/private/geometrynglyph01.html
+++ b/src/private/geometrynglyph01.html
@@ -19,12 +19,13 @@
       box-shadow: 1px 1px 5px gray;
       background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
       color: #eee;
+      box-sizing: border-box;
     }
     </style>
   </head>
   <body>
     <section id="container">
-      <div id="first">The quick brown fox jumps over the lazy dog.</div>
+      <div>The quick brown fox jumps over the lazy dog.</div>
     </section>
     <script src="geometrynglyph.js"></script>
   </body>
