--- a/public/private/geometrynglyph01.html
+++ b/public/private/geometrynglyph01.html
@@ -13,4 +13,5 @@
       box-shadow: 1px 1px 5px gray;
       background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
       color: #eee;
-    }</style></head><body><section id="container"><div id="first">The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
+      box-sizing: border-box;
+    }</style></head><body><section id="container"><div>The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
