--- a/public/private/geometrynglyph03.html
+++ b/public/private/geometrynglyph03.html
@@ -12,4 +12,5 @@
       background-size: 4px 4px;
       background-position: left top;
       color: #eee;
-    }</style></head><body><section id="container"><div id="first">The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
+      box-sizing: border-box;
+    }</style></head><body><section id="container"><div>The quick brown fox jumps over the lazy dog.</div></section><script src="geometrynglyph.js"></script></body></html>
