--- a/src/private/geometrynglyph02.html
+++ b/src/private/geometrynglyph02.html
@@ -14,12 +14,13 @@
       display: inline-block;
       margin: 9px 1px 1px 9px;
       padding: 8px;
+      box-sizing: border-box;
     }
     </style>
   </head>
   <body>
     <section id="container">
-      <div id="first">The quick brown fox jumps over the lazy dog.</div>
+      <div>The quick brown fox jumps over the lazy dog.</div>
     </section>
     <script src="geometrynglyph.js"></script>
   </body>
