--- a/src/private/geometrynglyph03.html
+++ b/src/private/geometrynglyph03.html
@@ -18,12 +18,13 @@
       background-size: 4px 4px;
       background-position: left top;
       color: #eee;
+      box-sizing: border-box;
     }
     </style>
   </head>
   <body>
     <section id="container">
-      <div id="first">The quick brown fox jumps over the lazy dog.</div>
+      <div>The quick brown fox jumps over the lazy dog.</div>
     </section>
     <script src="geometrynglyph.js"></script>
   </body>
