--- a/public/private/scroll22.html
+++ b/public/private/scroll22.html
@@ -4,6 +4,7 @@
     h1 {
       position: sticky;
       top: 0px;
+      z-index: 1;
       font-family: Helvetica, Arial;
       background: gray;
       color: white;
