--- a/src/private/index.html
+++ b/src/private/index.html
@@ -75,6 +75,7 @@
       <li><a href="geometrynglyph02.html">Geometry and Glyph 2</a></li>
       <li><a href="geometrynglyph03.html">Geometry and Glyph 3</a></li>
       <li><a href="scroll22.html">sticky 1</a></li>
+      <li><a href="scroll23.html">sticky 2</a></li>
     </ul>
   </body>
 </html>
