--- a/src/private/scroll23.html
+++ b/src/private/scroll23.html
@@ -6,15 +6,18 @@
     <style>
     section {
       margin: 50px;
+      width: 200%;
     }
     h1, footer {
       position: -webkit-sticky;
       position: sticky;
       font-family: Helvetica, Arial;
       padding: 1em;
+      width: 5em;
     }
     h1 {
       top: 0px;
+      left: 0px;
       z-index: 2;
       background: gray;
       color: white;
@@ -22,12 +25,16 @@
     div {
       background: #bfa79b;
       padding: 25%;
+      margin-right: 50px;
     }
     footer {
       bottom: 0px;
+      right: 0px;
       z-index: 1;
+      margin-right: 50px;
       background: lightgray;
       text-align: right;
+      float: right;
     }
     </style>
   </head>
