--- a/public/private/scroll23.html
+++ b/public/private/scroll23.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>section {
       margin: 50px;
+      width: 200%;
     }
     h1, footer {
       position: -webkit-sticky;
       position: sticky;
       font-family: Helvetica, Arial;
       padding: 1em;
+      width: 5em;
     }
     h1 {
       top: 0px;
+      left: 0px;
       z-index: 2;
       background: gray;
       color: white;
@@ -16,10 +19,14 @@
     div {
       background: #bfa79b;
       padding: 25%;
+      margin-right: 50px;
     }
     footer {
       bottom: 0px;
+      right: 0px;
       z-index: 1;
+      margin-right: 50px;
       background: lightgray;
       text-align: right;
+      float: right;
     }</style></head><body><section><h1>1</h1><div></div><footer>1</footer></section><section><h1>2</h1><div></div><footer>2</footer></section><section><h1>3</h1><div></div><footer>3</footer></section><section><h1>4</h1><div></div><footer>4</footer></section><section><h1>5</h1><div></div><footer>5</footer></section><section><h1>6</h1><div></div><footer>6</footer></section><section><h1>7</h1><div></div><footer>7</footer></section><section><h1>8</h1><div></div><footer>8</footer></section><section><h1>9</h1><div></div><footer>9</footer></section><section><h1>10</h1><div></div><footer>10</footer></section></body></html>
