--- a/public/private/scroll22.html
+++ b/public/private/scroll22.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>section {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
+      cursor: pointer;
+    }
+    section {
       margin: 50px;
     }
     h1, footer {
-      position: -webkit-sticky;
-      position: sticky;
       font-family: Helvetica, Arial;
       padding: 1em;
     }
     h1 {
-      top: 0px;
+      top: -3em;
       z-index: 2;
       background: gray;
       color: white;
@@ -18,8 +19,33 @@
       padding: 25%;
     }
     footer {
-      bottom: 0px;
+      bottom: -3em;
       z-index: 1;
       background: lightgray;
       text-align: right;
-    }</style></head><body><section><h1>1</h1><div></div><footer>1</footer></section><section><h1>2</h1><div></div><footer>2</footer></section><section><h1>3</h1><div></div><footer>3</footer></section><section><h1>4</h1><div></div><footer>4</footer></section><section><h1>5</h1><div></div><footer>5</footer></section><section><h1>6</h1><div></div><footer>6</footer></section><section><h1>7</h1><div></div><footer>7</footer></section><section><h1>8</h1><div></div><footer>8</footer></section><section><h1>9</h1><div></div><footer>9</footer></section><section><h1>10</h1><div></div><footer>10</footer></section></body></html>
+    }
+    .top, .bottom {
+      position: -webkit-sticky;
+      position: sticky;
+    }
+    .top {
+      top: 0px;
+      transition: top 0.4s;
+    }
+    .bottom {
+      bottom: 0px;
+      transition: bottom 0.4s;
+    }</style></head><body><section><h1>1</h1><div></div><footer>1</footer></section><section><h1>2</h1><div></div><footer>2</footer></section><section><h1>3</h1><div></div><footer>3</footer></section><section><h1>4</h1><div></div><footer>4</footer></section><section><h1>5</h1><div></div><footer>5</footer></section><section><h1>6</h1><div></div><footer>6</footer></section><section><h1>7</h1><div></div><footer>7</footer></section><section><h1>8</h1><div></div><footer>8</footer></section><section><h1>9</h1><div></div><footer>9</footer></section><section><h1>10</h1><div></div><footer>10</footer></section><script>(function() {
+      var toggle = function(tagName, className) {
+        var h1s = document.getElementsByTagName(tagName);
+        for (var i = 0; i < h1s.length; i++) {
+          h1s[i].classList.toggle(className);
+        }
+      };
+      var toggleBoth = function() {
+        toggle('h1', 'top');
+        toggle('footer', 'bottom');
+      }
+      toggleBoth();
+      window.addEventListener('click', toggleBoth);
+    })();</script></body></html>
