--- a/src/private/video01.html
+++ b/src/private/video01.html
@@ -1,114 +1,135 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            .container {
-                background-color: black;
-                width: 600px;
-                padding: 1em;
-            }
-            #player {
-                width: 100%;
-                height: 100%;
-                background: transparent;
-            }
-            #bar {
-                width: 100%;
-                height: 4em;
-                background: transparent;
-            }
-            button {
-                margin: 0 0 1em 1em;
-                padding: 1em;
-                float: right;
-                opacity: 0.9;
-            }
-            button:hover {
-                cursor: pointer;
-                opacity: 1 !important;
-            }
-            .hide-button {
-                opacity: 0;
-                transition: opacity 0.4s;
-            }
-            .hide-cursor {
-                cursor: none;
-            }
-            video {
-                width: 100%;
-            }
-        </style>
-    </head>
-    <body>
-        <section class="container">
-            <div id="player">
-                <div id="bar">
-                    <button id="fullscreen">Fullscreen</button>
-                    <button id="play">Play | Pause</button>
-                </div>
-                <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
-            </div>
-        </section>
-        <script>
-            var player = document.getElementById('player');
-            var bar = document.getElementById('bar');
-            var fullscreen = document.getElementById('fullscreen');
-            var play = document.getElementById('play');
-            var video = document.getElementById('video');
-            var timer = null;
+<html lang="en">
 
-            var setTimer = () => {
-                player.className = '';
-                fullscreen.className = '';
-                play.className = '';
+<head>
+<style>
+.container {
+  background-color: black;
+  width: 600px;
+  padding: 1em;
+}
+#player {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+#bar {
+  width: 100%;
+  height: 4em;
+  background: transparent;
+}
+button {
+  margin: 0 0 1em 1em;
+  padding: 1em;
+  float: right;
+  opacity: 0.9;
+}
+button:hover {
+  cursor: pointer;
+  opacity: 1 !important;
+}
+.hide-button {
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+.hide-cursor {
+  cursor: none;
+}
+video {
+  width: 100%;
+}
+</style>
+</head>
 
-                if (timer) {
-                    window.clearInterval(timer);
-                    timer = null;
-                }
+<body>
+<section class="container">
+  <div id="player">
+    <div id="bar">
+      <button id="fullscreen">Fullscreen</button>
+      <button id="play">Play | Pause</button>
+    </div>
+    <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4">
+    </video>
+  </div>
+</section>
 
-                timer = window.setInterval(() => {
-                    window.clearInterval(timer);
-                    timer = null;
-                    if (document.webkitIsFullScreen) {
-                        player.className = 'hide-cursor';
-                        fullscreen.className = 'hide-button';
-                        play.className = 'hide-button';
-                    }
-                }, 2000);
-            };
+<script>
+(() => {
+  var player = document.getElementById('player');
+  var bar = document.getElementById('bar');
+  var fullscreen = document.getElementById('fullscreen');
+  var play = document.getElementById('play');
+  var video = document.getElementById('video');
+  var timer = null;
 
-            var setBarHeight = () => {
-                if (document.webkitFullscreenElement && document.webkitFullscreenElement.id == 'player') {
-                    bar.style = 'height:' + ((window.screen.height - parseInt(getComputedStyle(video, null).height)) / 2) + 'px;';
-                } else {
-                    bar.style = '';
-                }
-            };
+  var setTimer = () => {
+    player.className = '';
+    fullscreen.className = '';
+    play.className = '';
 
-            window.addEventListener('mousemove', setTimer);
-            document.onwebkitfullscreenchange = setBarHeight;
+    if (timer) {
+      window.clearInterval(timer);
+      timer = null;
+    }
 
-            fullscreen.addEventListener('click', () => {
-                if (document.webkitIsFullScreen) {
-                    document.webkitExitFullscreen();
-                    fullscreen.textContent = 'Fullscreen';
-                } else {
-                    player.webkitRequestFullscreen();
-                    fullscreen.textContent = 'Exit Fullscreen';
-                }
-            });
+    timer = window.setInterval(() => {
+      window.clearInterval(timer);
+      timer = null;
+      if (document.webkitIsFullScreen || document.mozFullScreen) {
+        player.className = 'hide-cursor';
+        fullscreen.className = 'hide-button';
+        play.className = 'hide-button';
+      }
+    }, 2000);
+  };
 
-            play.addEventListener('click', () => {
-                if (video.paused) {
-                    video.play(); 
-                } else {
-                    video.pause();
-                }
-            });
+  var setBarHeight = () => {
+    var fullscreenElement = document.webkitFullscreenElement;
+    fullscreenElement |= document.mozFullScreenElement;
+    bar.style = '';
+    if (fullscreenElement && fullscreenElement.id == 'player') {
+      var y = window.screen.height;
+      y -= parseInt(getComputedStyle(video, null).height);
+      bar.style = 'height:' + (y / 2) + 'px;';
+    }
+  };
 
-            setBarHeight();
-            setTimer();
-        </script>
-    </body>
+  window.addEventListener('mousemove', setTimer);
+  document.onwebkitfullscreenchange = setBarHeight;
+  document.onmozfullscreenchange = setBarHeight;
+
+  fullscreen.addEventListener('click', () => {
+    if (document.webkitIsFullScreen || document.mozFullScreen) {
+      if (document.webkitExitFullscreen) {
+        document.webkitExitFullscreen();
+      }
+      if (document.mozCancelFullScreen) {
+        document.mozCancelFullScreen();
+      }
+      fullscreen.textContent = 'Fullscreen';
+    } else {
+      if (player.webkitRequestFullscreen) {
+        player.webkitRequestFullscreen();
+      }
+      if (player.mozRequestFullScreen) {
+        player.mozRequestFullScreen();
+      }
+      fullscreen.textContent = 'Exit Fullscreen';
+    }
+  });
+
+  play.addEventListener('click', () => {
+    if (video.paused) {
+      video.play();
+    } else {
+      video.pause();
+    }
+  });
+
+  setBarHeight();
+  setTimer();
+})();
+</script>
+</body>
+
 </html>
