--- a/src/private/index.html
+++ b/src/private/index.html
@@ -77,6 +77,7 @@
       <li><a href="scroll22.html">sticky 1</a></li>
       <li><a href="scroll23.html">sticky 2</a></li>
       <li><a href="video01.html">video 1</a></li>
+      <li><a href="video02.html">video 2</a></li>
     </ul>
   </body>
 </html>
