--- a/public/private/video03.html
+++ b/public/private/video03.html
@@ -8,14 +8,19 @@
   position: absolute;
   z-index: 1;
   width: 600px;
+  overflow: hidden;
   background: transparent;
 }
 #bar {
   position: absolute;
   z-index: 2;
+  top: 0;
   width: 100%;
   height: 4em;
   background: transparent;
+}
+#bar:hover {
+  top: 0 !important;
 }
 button {
   margin: 0 0 1em 1em;
@@ -25,11 +30,10 @@ button {
 }
 button:hover {
   cursor: pointer;
-  opacity: 1 !important;
 }
-.hide-button {
-  opacity: 0;
-  transition: opacity 0.4s;
+.hide-bar {
+  top: -3em !important;
+  transition: top 0.4s;
 }
 .hide-cursor {
   cursor: none;
@@ -47,8 +51,7 @@ video {
 
   var setTimer = () => {
     player.className = '';
-    fullscreen.className = '';
-    play.className = '';
+    bar.className = '';
 
     if (timer) {
       window.clearInterval(timer);
@@ -59,8 +62,7 @@ video {
       window.clearInterval(timer);
       timer = null;
       player.className = 'hide-cursor';
-      fullscreen.className = 'hide-button';
-      play.className = 'hide-button';
+      bar.className = 'hide-bar';
     }, 2000);
   };
 
