--- a/public/private/video01.html
+++ b/public/private/video01.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html><html lang="en"><head><style>.container {
+<!DOCTYPE html><html lang="en"><head><style>.frame {
   background-color: black;
   width: 600px;
   height: 330px;
   padding: 1em;
 }
 #player {
-  position: absolute;
-  z-index: 1;
-  width: 600px;
-  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
   background: transparent;
+  background-color: #000;
+  overflow: hidden;
 }
 #bar {
   position: absolute;
@@ -18,6 +19,9 @@
   width: 100%;
   height: 4em;
   background: transparent;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
 }
 #bar:hover {
   top: 0 !important;
@@ -32,16 +36,17 @@ button:hover {
   cursor: pointer;
 }
 .hide-bar {
-  top: -3em !important;
+  top: -4em !important;
   transition: top 0.4s;
 }
 .hide-cursor {
   cursor: none;
 }
 video {
+  position: relative;
   width: 100%;
   height: 100%;
-}</style></head><body><section class="container"><div id="player"><div id="bar"><button id="fullscreen">Fullscreen</button> <button id="play">Play | Pause</button></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>(() => {
+}</style></head><body><section class="frame"><div id="player"><div id="bar"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>(() => {
   var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
