--- a/public/private/video02.html
+++ b/public/private/video02.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html><html lang="en"><head><style>.container {
+<!DOCTYPE html><html lang="en"><head><style>.frame {
   background-color: black;
   width: 600px;
   height: 330px;
   padding: 1em;
 }
 #player {
-  position: absolute;
-  z-index: 1;
-  width: 600px;
+  position: relative;
+  width: 100%;
+  height: 100%;
   background: transparent;
+  background-color: #000;
+  overflow: hidden;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 #bar {
   position: absolute;
   z-index: 2;
+  top: 0;
   width: 100%;
   height: 4em;
   background: transparent;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
 }
 button {
   margin: 0 0 1em 1em;
   padding: 1em;
-  float: right;
   opacity: 0.9;
 }
 button:hover {
@@ -35,9 +46,10 @@ button:hover {
   cursor: none;
 }
 video {
+  position: relative;
   width: 100%;
   height: 100%;
-}</style></head><body><section class="container"><div id="player"><div id="bar"><button id="fullscreen">Fullscreen</button> <button id="play">Play | Pause</button></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>(() => {
+}</style></head><body><section class="frame"><div id="player"><div class="container"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div id="bar"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></section><script>(() => {
   var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
