draw transparent border around the buttons

--- a/src/private/video01.html
+++ b/src/private/video01.html
@@ -31,10 +31,14 @@
 #bar:hover {
   top: 0 !important;
 }
+.buttons {
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
 button {
   margin: 0 0 1em 1em;
   padding: 1em;
-  float: right;
   opacity: 0.9;
 }
 button:hover {
@@ -59,8 +63,10 @@ video {
 <section class="frame">
   <div id="player">
     <div id="bar">
-      <button id="play">Play | Pause</button>
-      <button id="fullscreen">Fullscreen</button>
+      <div class="buttons">
+        <button id="play">Play | Pause</button>
+        <button id="fullscreen">Fullscreen</button>
+      </div>
     </div>
     <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
   </div>
