--- a/public/private/video01.html
+++ b/public/private/video01.html
@@ -26,10 +26,14 @@
 #bar:hover {
   top: 0 !important;
 }
+.buttons {
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
 button {
   margin: 0 0 1em 1em;
   padding: 1em;
-  float: right;
   opacity: 0.9;
 }
 button:hover {
@@ -46,7 +50,7 @@ video {
   position: relative;
   width: 100%;
   height: 100%;
-}</style></head><body><section class="frame"><div id="player"><div id="bar"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>(() => {
+}</style></head><body><section class="frame"><div id="player"><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>(() => {
   var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
