--- a/public/private/video02.html
+++ b/public/private/video02.html
@@ -29,6 +29,11 @@
   flex-wrap: nowrap;
   justify-content: flex-end;
 }
+.buttons {
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
 button {
   margin: 0 0 1em 1em;
   padding: 1em;
@@ -49,7 +54,7 @@ video {
   position: relative;
   width: 100%;
   height: 100%;
-}</style></head><body><section class="frame"><div id="player"><div class="container"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div id="bar"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></section><script>(() => {
+}</style></head><body><section class="frame"><div id="player"><div class="container"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div></section><script>(() => {
   var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
