Add a SVG-as-image

--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -8,6 +8,10 @@
   <style>
   img {
     width: 100%;
+    vertical-align: middle;
+  }
+  div {
+    display: inline-block;
   }
   </style>
 </head>
@@ -16,7 +20,9 @@
     <img src="http://codedread.com/clipart/kthoom.svgz">
   </div>
   <div>
-    <img src="http://c.s-microsoft.com/en-us/CMSImages/Srfc_Pro4AndBook_Mobile_1002_540x304_EN_US.jpg?version=e0f0184c-ed9e-54b2-95f3-c5f6082a7866">
+    <a href="https://reactjs.org/" target="_blank">
+      <img src="react.svg" alt="React" title="React">
+    </a>
   </div>
 </body>
 </html>
