--- a/public/private/svgasimg01.html
+++ b/public/private/svgasimg01.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="-1"><style>img {
     width: 100%;
-  }</style></head><body><div><img src="http://codedread.com/clipart/kthoom.svgz"></div><div><img src="http://c.s-microsoft.com/en-us/CMSImages/Srfc_Pro4AndBook_Mobile_1002_540x304_EN_US.jpg?version=e0f0184c-ed9e-54b2-95f3-c5f6082a7866"></div></body></html>
+    vertical-align: middle;
+  }
+  div {
+    display: inline-block;
+  }</style></head><body><div><img src="http://codedread.com/clipart/kthoom.svgz"></div><div><a href="https://reactjs.org/" target="_blank"><img src="react.svg" alt="React" title="React"></a></div></body></html>
