--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -7,7 +7,7 @@
   <meta HTTP-EQUIV="Expires" CONTENT="-1">
   <style>
   img {
-    width: 100%;
+    height: 150px;
     vertical-align: middle;
   }
   div {
