--- a/public/private/svgasimg01.html
+++ b/public/private/svgasimg01.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="-1"><style>img {
-    height: 150px;
+    height: 50vh;
+    max-width: 100%;
     vertical-align: middle;
   }
   div {
