--- a/src/private/svgasimg01.html
+++ b/src/private/svgasimg01.html
@@ -7,7 +7,8 @@
   <meta HTTP-EQUIV="Expires" CONTENT="-1">
   <style>
   img {
-    height: 150px;
+    height: 50vh;
+    max-width: 100%;
     vertical-align: middle;
   }
   div {
