--- a/public/private/video02.html
+++ b/public/private/video02.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><style>.frame {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
+  font-family: "Open Sans", "Segoe UI", "Helvetica Neue", sans-serif;
+}
+.frame {
   background-color: black;
   width: 600px;
   height: 330px;
-  padding: 1em;
+  max-width: 100%;
 }
 #player {
   position: relative;
