--- a/src/private/index.html
+++ b/src/private/index.html
@@ -46,13 +46,14 @@
       <li><a href="scroll09.html">NegZ not visible (opacity zero)</a></li>
       <li><a href="scroll10.html">Parallax scrolling demo reduction 1</a></li>
       <li><a href="scroll18.html">Parallax scrolling demo reduction 2</a></li>
+      <li><a href="https://ihatetomatoes.net/demos/parallax-scroll-effect/">Parallax scrolling demo <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="scroll13.html">Bg-clip repro</a></li>
       <li><a href="scroll14.html">Fixed bg table</a></li>
       <li><a href="scroll15.html">Invert outline color</a></li>
       <li><a href="scroll16.html">MIUI reduction</a></li>
       <li><a href="scroll20.html">Preserve 3D transform style</a></li>
       <li><a href="preserve3d01.html">Cube</a></li>
-      <li><a href="preserve3d02.html">Bing images</a></li>
+      <li><a href="http://www.effectgames.com/demos/canvascycle/">canvas 1 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="scroll01.html">CSS Filter Effects</a></li>
       <li><a href="filter01.html">Dependent hue-rotate effect</a></li>
       <li><a href="filter02.html">Fixed-bg and sepia effect</a></li>
@@ -79,6 +80,10 @@
       <li><a href="scroll23.html">sticky 2</a></li>
       <li><a href="video01.html">video 1</a></li>
       <li><a href="video02.html">video 2</a></li>
+      <li><a href="https://www.w3schools.com/html/html5_video.asp">video 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.netflix.com/watch/80076852?trackId=14170286&amp;tctx=1%2C0%2C0dee1072-242b-4c33-ad1d-17cd036486b8-141014361">video 4 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.amazon.com/LEGO-Disney-Moanas-Ocean-Voyage/dp/B01J8PBC0O/ref=sr_1_1?s=toys-and-games&amp;ie=UTF8&amp;qid=1497578840&amp;sr=1-1&amp;keywords=lego+moana">video 5 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.youtube.com/watch?v=0AWhsBNU1jU">video 6 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
     </ul>
   </body>
 </html>
